@@ -9,6 +9,6 @@
   </mat-dialog-content>
   <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close (click)="cancel()">{{'Cancel'|translate}}</button>
-    <button mat-button mat-dialog-close [disabled]="!userFiles.length"(click)="add()">{{'Add'|translate}}</button>
+    <button mat-button [disabled]="!userFiles.length"(click)="add()">{{'Add'|translate}}</button>
   </mat-dialog-actions>
 </div>
