@@ -1,4 +1,9 @@
 30 July 2021 Petasis George <petasis@iit.demokritos.gr>:
+ * backend/clarin/app/Http/Controllers/DocumentController.php:
+ * clarin-angular/src/app/components/dialogs/add-documents-dialog/add-documents-dialog.component.html:
+ * clarin-angular/src/assets/data/menu.json: Fixed a bug during adding
+ Documents.
+
  * backend/clarin/app/Http/Controllers/AnnotationController.php:
  * backend/clarin/app/Http/Controllers/TempAnnotationController.php:
  * clarin-angular/src/app/components/controls/base-control/base-control.component.ts:
